[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/tileset.png" type="Texture" id=1]
[ext_resource path="res://hud/overlays/order.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 48, 128, 16, 16 )
margin = Rect2( 0, 0, 0, -5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )
margin = Rect2( 0, 0, 0, -5 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 80, 16, 16 )
margin = Rect2( 0, 0, 0, -5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 80, 16, 16 )
margin = Rect2( 0, 0, 0, -5 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.542022, 0.272156, 0.765625, 1, 0.8125, 0.627178, 0.491943, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="StyleBoxTexture" id=7]
texture = SubResource( 6 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.831373, 0.87451, 0.929412, 1, 0.586897, 0.522171, 0.714844, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="StyleBoxTexture" id=10]
texture = SubResource( 9 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="Animation" id=11]
resource_name = "alert"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.95 ),
"transitions": PoolRealArray( 3.86375, 3.73213, 2.07053 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.792157, 0.317647, 0.376471, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.25, 3.24901, 10.1965 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -25 ), Vector2( 0, 75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=13]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.225313, 1 ),
"update": 0,
"values": [ Vector2( 1020, 0 ), Vector2( 40, 25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 2.73208, 0.307786 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Order" type="NinePatchRect"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
texture = ExtResource( 1 )
region_rect = Rect2( 160, 96, 32, 32 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_left = 0
custom_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
editor/display_folded = true
margin_top = 10.0
margin_right = 100.0
margin_bottom = 84.0

[node name="Wish" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Wish"]
margin_left = 30.0
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
hint_tooltip = "I guess this is not working"
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="Requiriments" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 34.0
margin_right = 100.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 20 )
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Requiriments"]
margin_left = 8.0
margin_right = 33.0
margin_bottom = 20.0
rect_min_size = Vector2( 25, 20 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/Requiriments"]
margin_left = 37.0
margin_right = 62.0
margin_bottom = 20.0
rect_min_size = Vector2( 25, 20 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 3 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/Requiriments"]
margin_left = 66.0
margin_right = 91.0
margin_bottom = 20.0
rect_min_size = Vector2( 25, 20 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 4 )
expand = true
stretch_mode = 6

[node name="ElapsedTime" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 100.0
margin_bottom = 74.0
rect_min_size = Vector2( 100, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 2
custom_constants/margin_left = 8
custom_constants/margin_bottom = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/ElapsedTime"]
margin_left = 8.0
margin_top = 2.0
margin_right = 92.0
margin_bottom = 14.0
hint_tooltip = "This is sucking bugged"
size_flags_vertical = 1
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
value = 49.87
percent_visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "entry"
anims/alert = SubResource( 11 )
anims/done = SubResource( 12 )
anims/entry = SubResource( 13 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
